--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5d187c82",
+   "id": "7a4b89c6",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "70e60017",
+   "id": "c6dfe41f",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a6e2cf9",
+   "id": "b3fba56c",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3df1483e",
+   "id": "0c6e9574",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf2fd05d",
+   "id": "d05c4c43",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "102b227b",
+   "id": "01de700b",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "904623b9",
+   "id": "4b50f8de",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "193745e5",
+   "id": "4933e07c",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "37688c31",
+   "id": "7d9bc620",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b21731dd",
+   "id": "9622a5d4",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "15b35e9d",
+   "id": "1df70d88",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8c429687",
+   "id": "487f22e7",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "710791c0",
+   "id": "279ba072",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5ea9bb7f",
+   "id": "4adae7c9",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef4c1507",
+   "id": "17861c7f",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bf528fd0",
+   "id": "83db4e2d",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ecf005b",
+   "id": "bad277da",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ea45c234",
+   "id": "ea40d881",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7db8465e",
+   "id": "bbef73b1",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a16fc176",
+   "id": "eb5881ee",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b49f92e4",
+   "id": "7f4eb539",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "63d25bf8",
+   "id": "eefc95be",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "070b28c5",
+   "id": "cdaf7b38",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "70aadd32",
+   "id": "d128e55a",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "438ed399",
+   "id": "7c275f57",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "bdf5f752",
+   "id": "88a20c5d",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3005586b",
+   "id": "77690166",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4ccc36fa",
+   "id": "212d72db",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e510704",
+   "id": "4dc11f03",
    "metadata": {},
    "source": [
     "# Getting input from the user\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "22bc362b",
+   "id": "ff21d8a9",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "37dce19e",
+   "id": "548b4719",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "fa52f87c",
+   "id": "dc7b8c9c",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0627c4ca",
+   "id": "89bdc0df",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "908d6dad",
+   "id": "b2dbb8b4",
    "metadata": {},
    "source": [
     "# Exercise: Multi-part greeting\n",
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8e009c8e",
+   "id": "646c395d",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db0d15fe",
+   "id": "fcd013c9",
    "metadata": {},
    "source": [
     "# f-strings\n",
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "89d52534",
+   "id": "5c12d72b",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "22a136ee",
+   "id": "536fb6db",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "800c2357",
+   "id": "3adc06d2",
    "metadata": {},
    "source": [
     "# Comparing values\n",
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "af823507",
+   "id": "cb488368",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d19e2477",
+   "id": "d4116a02",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "705e300f",
+   "id": "f89ac355",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "52919e22",
+   "id": "29a4925d",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "056c1af0",
+   "id": "e0087ca2",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a70b4c0e",
+   "id": "8e2132ea",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "81b60efe",
+   "id": "2637003f",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c02a5ab9",
+   "id": "9369d5e6",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b104da5b",
+   "id": "d5b32ddd",
    "metadata": {},
    "source": [
     "# Comparison operators\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "88cd2726",
+   "id": "f83731c1",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d8322e23",
+   "id": "d00efeb8",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a08651f2",
+   "id": "fd6407ea",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "21f97411",
+   "id": "3be9da29",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "589d3c88",
+   "id": "b9b61640",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bf3cca4",
+   "id": "22763f9e",
    "metadata": {},
    "source": [
     "# Conditional execution\n",
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "418b9f59",
+   "id": "e798f9d1",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "393f7cb3",
+   "id": "90cd2f8d",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff12ce8e",
+   "id": "cc9e2865",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first?\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "7fc4f461",
+   "id": "0af682d1",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "372973f9",
+   "id": "7b2b8ebf",
    "metadata": {},
    "source": [
     "# More sophisticated comparisons\n",
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a839a11b",
+   "id": "27a76d04",
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "783e2d3f",
+   "id": "a8de99f5",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first? \n",
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "339a8ae0",
+   "id": "a85d17a1",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "496b8f3d",
+   "id": "a9549616",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "3a890987",
+   "id": "7fe1f002",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a62b0ee",
+   "id": "2ca91fad",
    "metadata": {},
    "source": [
     "# Combining conditions\n",
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "741f2939",
+   "id": "6b9644bf",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e0b5e8f4",
+   "id": "7ca78c7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "4b1638b2",
+   "id": "ce3197e8",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "efab6a12",
+   "id": "8ccc026e",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "513a4bb2",
+   "id": "26d94a9c",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e38ed3c1",
+   "id": "b29374df",
    "metadata": {},
    "source": [
     "# Exercise: Name and company\n",
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "12e57c8d",
+   "id": "acb5442f",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a64f1b04",
+   "id": "d545f8f2",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "92648e40",
+   "id": "75478328",
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03fa9615",
+   "id": "fab4a4f7",
    "metadata": {},
    "source": [
     "# The `not` logical operator\n",
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "c92862ea",
+   "id": "328ed3e1",
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "c5188be8",
+   "id": "8b268132",
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa6aaf2e",
+   "id": "f8eadffd",
    "metadata": {},
    "source": [
     "# Numbers\n",
@@ -1662,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "1bcfa498",
+   "id": "8182bfdb",
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "67357efa",
+   "id": "e73761fa",
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "56934f01",
+   "id": "0c62bfa0",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "8e258a6c",
+   "id": "56c67f61",
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "f6033932",
+   "id": "c2605305",
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "2a7de27a",
+   "id": "cfa60465",
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "de054e22",
+   "id": "c0a3b47b",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "625d22cd",
+   "id": "67dab18a",
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6a851f3d",
+   "id": "97646690",
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1857,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "1d7bc9a5",
+   "id": "6cd3abab",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "5258c44c",
+   "id": "de7fb0bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1891,7 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "38e288fe",
+   "id": "6a915d4c",
    "metadata": {},
    "outputs": [
     {
@@ -1915,7 +1915,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "b412ebd0",
+   "id": "cd550468",
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1941,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "93faaf20",
+   "id": "e2b02ab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1953,7 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "7150edc6",
+   "id": "9da9c538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1963,7 +1963,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "2d87814d",
+   "id": "5341848c",
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "a5c31791",
+   "id": "0cb556c0",
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "3cd3024d",
+   "id": "993fdffc",
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "42f3ec93",
+   "id": "3127d239",
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "737017a8",
+   "id": "675836a5",
    "metadata": {},
    "source": [
     "# Exercise: Guessing game\n",
@@ -2076,8 +2076,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "id": "e0c321f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is 72.\n",
+      "Enter your guess: 72\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[96], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m guess \u001b[38;5;241m==\u001b[39m number:\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYou got it!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[43mguess\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mnumber\u001b[49m:\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mToo high!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "number = 72\n",
+    "print(f'The number is {number}.')\n",
+    "\n",
+    "guess = input('Enter your guess: ')\n",
+    "\n",
+    "if guess == number:\n",
+    "    print('You got it!')\n",
+    "elif guess > number:\n",
+    "    print('Too high!')\n",
+    "else:\n",
+    "    print('Too low!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f1d9a648",
+   "id": "b344eb74",
    "metadata": {},
    "outputs": [],
    "source": []
