--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8961d3a4",
+   "id": "e310247c",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b0ad69b9",
+   "id": "95ff1310",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f36bb5b3",
+   "id": "e5dad06a",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "573a0a00",
+   "id": "cf1033ee",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4c96444e",
+   "id": "cf771894",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0e40197a",
+   "id": "0b6a0982",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "14eb719d",
+   "id": "a982c183",
    "metadata": {},
    "outputs": [
     {
@@ -222,15 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f662acc",
+   "execution_count": 61,
+   "id": "d4a53180",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50  Ops! a hint\n"
+      "50  Ops! a hint\n",
+      "what was the number: 40\n",
+      "Too low!\n",
+      "No more guress!\n"
      ]
     }
    ],
@@ -238,23 +241,21 @@
     "number = 50\n",
     "print(f'{number}  Ops! a hint')\n",
     "guess = input('what was the number: ')\n",
-    "if guess == '':\n",
-    "    print('No more guress!')\n",
-    "else:\n",
-    "    guess = int(guess)\n",
+    "guess = int(guess)\n",
     "\n",
     "if guess == number:\n",
     "    print('You got it!')\n",
     "elif guess < number:\n",
     "    print('Too low!')\n",
     "elif guess > number:\n",
-    "    print('Too high!')\n"
+    "    print('Too high!')\n",
+    "print('No more guress!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "468681ae",
+   "id": "020a218e",
    "metadata": {},
    "outputs": [],
    "source": []
