--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "a756baa2",
+   "id": "d11fed3b",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "e3855a01",
+   "id": "e74af4a6",
    "metadata": {},
    "outputs": [
     {
@@ -361,8 +361,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "d7dea6cf",
+   "execution_count": 81,
+   "id": "28c8c05f",
    "metadata": {},
    "outputs": [
     {
@@ -370,8 +370,18 @@
      "output_type": "stream",
      "text": [
       "100\n",
-      "Enter the number: 101\n",
-      "Too low!\n"
+      "Enter the number: 72\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[81], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m number \u001b[38;5;241m==\u001b[39m x:\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYou got it!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[43mnumber\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m:\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mToo low!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m number \u001b[38;5;241m>\u001b[39m x:\n",
+      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'str' and 'int'"
      ]
     }
    ],
@@ -379,11 +389,11 @@
     "x = 100\n",
     "print (x)\n",
     "number = input('Enter the number: ')\n",
-    "if number == 'x':\n",
+    "if number == x:\n",
     "    print('You got it!')\n",
-    "elif number < 'x':\n",
+    "elif number < x:\n",
     "    print('Too low!')\n",
-    "elif number > 'x':\n",
+    "elif number > x:\n",
     "    print('Too high!')\n",
     "else:\n",
     "    print('No more guesses')"
@@ -392,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1a5b210",
+   "id": "aece0158",
    "metadata": {},
    "outputs": [],
    "source": []
