--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "47685d1e",
+   "id": "39b3605e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5389a232",
+   "id": "78a6cb82",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b14108bd",
+   "id": "8a946d36",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "030f98e4",
+   "id": "3689e696",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b6122bdb",
+   "id": "170dfd4e",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6b0e2cf3",
+   "id": "d69d55f6",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "af8e2713",
+   "id": "54ddbf1a",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5ebc5a51",
+   "id": "14dd0780",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcf301ff",
+   "id": "c623d3d8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8141ee96",
+   "id": "903fca21",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e8e9587a",
+   "id": "ae0d8624",
    "metadata": {
     "scrolled": true
    },
@@ -224,25 +224,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6e007c34",
+   "execution_count": 54,
+   "id": "cb34f7ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess the number: 50\n",
+      "You got it!\n"
+     ]
+    }
+   ],
    "source": [
     "x = 50\n",
     "y = input (\"Guess the number: \")\n",
-    "if int(y) == x:\n",
+    "y = int(y)\n",
+    "if y == x:\n",
     "    print(\"You got it!\")\n",
-    "elif int(y) < x:\n",
+    "elif y < x:\n",
     "    print(\"Too low! Try again!\")\n",
-    "elif int(y) > x:\n",
+    "elif y > x:\n",
     "    print(\"Too high!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05a4f241",
+   "id": "77da19ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -250,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b36035a0",
+   "id": "2b2c2ee3",
    "metadata": {},
    "outputs": [],
    "source": []
